--- a/package.json
+++ b/package.json
@@ -7,20 +7,31 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "extract": "lingui extract",
+    "compile": "lingui compile --typescript"
   },
   "dependencies": {
+    "@lingui/core": "^5.3.1",
+    "@lingui/macro": "^5.3.1",
+    "@lingui/react": "^5.3.1",
+    "@lingui/swc-plugin": "^5.5.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-virtual": "^3.13.9",
+    "@types/react-katex": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-katex": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
@@ -29,10 +40,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@lingui/babel-plugin-lingui-macro": "^5.3.1",
+    "@lingui/cli": "^5.3.1",
+    "@lingui/vite-plugin": "^5.3.1",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
