--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "@types/react-katex": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.2.0",
     "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-katex": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
+    "zod": "^3.25.23",
+    "zod-i18n-map": "^2.27.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
