--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^15.5.2",
     "react-katex": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
