--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "extract": "lingui extract",
-    "compile": "lingui compile --typescript"
+    "compile": "lingui compile --typescript",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@lingui/core": "^5.3.1",
@@ -25,26 +26,20 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-virtual": "^3.13.9",
     "@types/papaparse": "^5.3.16",
-    "@types/react-katex": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "decimal.js": "^10.5.0",
     "i18next": "^25.2.0",
-    "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.5.2",
-    "react-katex": "^3.1.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "zod": "^3.25.23",
-    "zod-i18n-map": "^2.27.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -52,6 +47,8 @@
     "@lingui/babel-plugin-lingui-macro": "^5.3.1",
     "@lingui/cli": "^5.3.1",
     "@lingui/vite-plugin": "^5.3.1",
+    "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/cli": "^2.5.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -64,7 +61,6 @@
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vite-plugin-worker": "^1.0.5"
+    "vite": "^6.3.5"
   }
 }
