--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "extract": "lingui extract",
     "compile": "lingui compile --typescript",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest"
   },
   "dependencies": {
     "@lingui/core": "^5.3.1",
@@ -28,6 +29,7 @@
     "@types/papaparse": "^5.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "comlink": "^4.4.2",
     "i18next": "^25.2.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
@@ -50,6 +52,8 @@
     "@lingui/vite-plugin": "^5.3.1",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/cli": "^2.5.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -59,6 +63,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "tw-animate-css": "^1.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
