--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
+    "vaul": "^1.1.2",
     "vitest": "^3.1.4",
     "zod": "^3.25.23",
     "zustand": "^5.0.4"
